--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,8 +5,14 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
+	<style>
+		#linkPrevious{text-decoration: none; position: absolute; top: 1px; right: 12px;margin: auto;}
+		#linkNext{text-decoration: none; position: absolute; top: 1px; right: 1px;margin: auto;}
+	</style>
 </head>
 <body>
+	<a id="linkPrevious" href="http://sway-webapp.herokuapp.com"><</a>
+	<a id="linkNext" href="https://communication-webapp.herokuapp.com">></a>
 	<h2>Stream2me</h2>
 	<input type="text" id="userText" onkeyup="postStream(this.value);"/>
 	<br/><br/>
