--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
 	<a id="linkPrevious" href="http://sway-webapp.herokuapp.com"><</a>
 	<a id="linkNext" href="https://communication-webapp.herokuapp.com">></a>
 	<h2>Stream2me</h2>
-	<input type="text" id="userText" onkeyup="postStream(this.value);"/>
+	<input type="text" id="userText" onkeypress="postStream(this.value);"/>
 	<br/><br/>
 	<span id="text"></span>
 </body>
